# CMake

./: .gitignore  CMakeLists.txt  README.md
android/: build.gradle  checkstyle.xml  gradle.properties  local.properties  settings.gradle
android/demo/app/: build.gradle
android/demo/app/src/main/: AndroidManifest.xml
android/demo/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/demo/app/src/main/java/com/wxdut/cmake/: MainActivity.java
android/demo/app/src/main/res/layout/: activity_ar.xml  activity_main.xml
android/demo/app/src/main/res/values/: strings.xml
android/demo/gradle/wrapper/: gradle-wrapper.properties
android/gradle/wrapper/: gradle-wrapper.properties
android/include/: wxdut.h
ios/: gen-xcodeproj.sh  ios.toolchain.cmake
ios/demo.xcworkspace/: contents.xcworkspacedata
ios/demo.xcworkspace/xcuserdata/wangxiao.xcuserdatad/: UserInterfaceState.xcuserstate
ios/demo.xcworkspace/xcuserdata/wangxiao.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist  Expressions.xcexplist
ios/demo/demo/: AppDelegate.h  AppDelegate.m  Info.plist  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.mm  main.m
ios/demo/demo.xcodeproj/: project.pbxproj
ios/demo/demo.xcodeproj/xcshareddata/xcschemes/: demo.xcscheme
src/: wxdut.cc
